add the remaining user-data required to tie the newly spun machine to the right puppetmaster and environment

--- a/env/provisioning/templates/user-data.erb
+++ b/env/provisioning/templates/user-data.erb
@@ -1,1 +1,5 @@
 servertype=web
+hostname=web1.ec2.internal
+hosts=<%= @serverip -%> puppet.ec2.internal puppet
+server=puppet.ec2.internal
+environment=dev
